--- a/Readme
+++ b/Readme
@@ -1,9 +1,2 @@
-# Multiplayer Snake game #
-Setting up application game using docker
-
-###### This repository is part of DevSecOps udemy Tutorial ######
-We provide training in DevSecOps (DevOps + Security).
-This professional course if for all (Freshers, Build & Release, DevOps, Infosec, Application Support, Infrastructure, QA) Professionals .
-https://www.udemy.com/course/devsecops/?referralCode=7A73B2D1AD95E1F68C1F
-Blog Link: https://devsecopsautomation.wordpress.com/
-################################################################
+SNAKE Game for DevSecOps!!
+![snake_game](https://user-images.githubusercontent.com/51474437/82561023-3aa96f80-9b90-11ea-9d8c-6bb18fcb2c6e.png)
